--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-    "name": "filereader",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "start": "node app.js"
-    },
-        "dependencies": {
-    }
+  "name": "filereader",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "event-stream": "~3.1.0",
+    "sprintf": "~0.1.3",
+    "request": "~2.33.0",
+    "zlib": "~1.0.5",
+    "csv-streamify": "~0.9.0",
+    "handlebars": "~1.3.0",
+    "iconv-lite": "~0.2.11"
+  }
 }
