--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "zlib": "~1.0.5",
     "csv-streamify": "~0.9.0",
     "handlebars": "~1.3.0",
-    "iconv-lite": "~0.2.11"
+    "iconv-lite": "~0.2.11",
+    "d3": "3.4.2",
+    "express": "3.4.0",
+    "jsdom": "0.10.1"
   }
 }
